--- a/index.html
+++ b/index.html
@@ -1,113 +1,114 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gian Franco Auccatinco Ponce</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-<style>
-  body {
-    font-family: 'Poppins', sans-serif;
-    background-color: #E0F7FA;
-    margin: 0;
-    padding: 0;
-  }
-  header {
-    background-color: #81D4FA;
-    padding: 15px;
-    text-align: center;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-  }
-  header h1 {
-    margin: 0;
-    color: #0288D1;
-  }
-  header p {
-    margin: 5px 0 10px;
-    color: #0288D1;
-  }
-  nav {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-  }
-  nav a {
-    background-color: #29B6F6;
-    color: white;
-    padding: 8px 12px;
-    border-radius: 5px;
-    text-decoration: none;
-    font-weight: 600;
-    transition: background-color 0.3s;
-  }
-  nav a:hover {
-    background-color: #0288D1;
-  }
-  section {
-    width: 90%;
-    max-width: 800px;
-    margin: 20px auto;
-  }
-  .box {
-    background-color: #81D4FA;
-    border: 2px solid #29B6F6;
-    border-radius: 10px;
-    padding: 20px;
-    margin-bottom: 20px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  }
-  h2 {
-    color: #0288D1;
-  }
-  ul {
-    list-style: none;
-    padding-left: 0;
-  }
-  li {
-    margin-bottom: 10px;
-  }
-  form {
-    background-color: #E0F7FA;
-    padding: 15px;
-    border-radius: 8px;
-    border: 2px solid #29B6F6;
-  }
-  input, textarea {
-    width: 100%;
-    padding: 8px;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    border: 1px solid #29B6F6;
-  }
-  input[type="submit"] {
-    background-color: #29B6F6;
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-weight: 600;
-  }
-  input[type="submit"]:hover {
-    background-color: #0288D1;
-  }
-  .amigo-card {
-    background-color: #E0F7FA;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    border: 1px solid #29B6F6;
-  }
-  footer {
-    background-color: #81D4FA;
-    text-align: center;
-    padding: 10px;
-    margin-top: 40px;
-    color: #0288D1;
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="google-site-verification" content="ZSTle_2SNs3IrTyrusXqZA_5FLdtxU-GhJ6w9UfURK4" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gian Franco Auccatinco Ponce</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #E0F7FA;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #81D4FA;
+      padding: 15px;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    header h1 {
+      margin: 0;
+      color: #0288D1;
+    }
+    header p {
+      margin: 5px 0 10px;
+      color: #0288D1;
+    }
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+    }
+    nav a {
+      background-color: #29B6F6;
+      color: white;
+      padding: 8px 12px;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: background-color 0.3s;
+    }
+    nav a:hover {
+      background-color: #0288D1;
+    }
+    section {
+      width: 90%;
+      max-width: 800px;
+      margin: 20px auto;
+    }
+    .box {
+      background-color: #81D4FA;
+      border: 2px solid #29B6F6;
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #0288D1;
+    }
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+    form {
+      background-color: #E0F7FA;
+      padding: 15px;
+      border-radius: 8px;
+      border: 2px solid #29B6F6;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      margin-bottom: 10px;
+      border-radius: 4px;
+      border: 1px solid #29B6F6;
+    }
+    input[type="submit"] {
+      background-color: #29B6F6;
+      color: white;
+      border: none;
+      cursor: pointer;
+      font-weight: 600;
+    }
+    input[type="submit"]:hover {
+      background-color: #0288D1;
+    }
+    .amigo-card {
+      background-color: #E0F7FA;
+      padding: 10px;
+      border-radius: 5px;
+      margin-bottom: 10px;
+      border: 1px solid #29B6F6;
+    }
+    footer {
+      background-color: #81D4FA;
+      text-align: center;
+      padding: 10px;
+      margin-top: 40px;
+      color: #0288D1;
+    }
+  </style>
 </head>
 <body>
 
